# minigl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main.cpp
libminigl/: CMakeLists.txt
libminigl/include/: Color.h  VAO.h
libminigl/include/minigl/: Shader.h  Texture.h  VAO.h  Window.h
libminigl/shader/: vertex.glsl
libminigl/src/: Shader.cpp  Texture.cpp  VAO.cpp  Window.cpp
minigl/: CMakeLists.txt
minigl/dep/glad/include/glad/: gl.h
minigl/dep/glad/src/: gl.c
minigl/include/minigl/: Camera.h  Color.h  Cube.h  Drawable.h  Input.h  Light.h  Material.h  RenderState.h  Shader.h  Texture.h  Transformable.h  Utils.h  VAO.h  Window.h
minigl/shader/: fragment.glsl  vertex.glsl
minigl/src/: Camera.cpp  Cube.cpp  Input.cpp  Light.cpp  Material.cpp  Shader.cpp  Texture.cpp  Transformable.cpp  Utils.cpp  VAO.cpp  Window.cpp
